@@ -25,6 +25,9 @@
     "jsx"
   ],
   "rules": {
+    "import/no-extraneous-dependencies": [
+      "warn"
+    ],
     "import/no-unresolved": [
       "off"
     ],
