@@ -7,65 +7,88 @@ import {
   hideErrorMessages,
   showLoadingIndicator,
 } from '../../events-displayer.js'
-import Formatter from '../../formatter.js'
 
 const { InspectorControls, useBlockProps } = wp.blockEditor
 const { Panel, PanelBody } = wp.components
-const { useEffect } = wp.element
-const { __ } = wp.i18n
+const { useEffect, useRef, useState } = wp.element
+const { __, sprintf } = wp.i18n
 
 const NAME = '<wordpress-name>'
 
 export default ({ attributes, setAttributes }) => {
-  let timer
+  const [groups, setGroups] = useState([])
+  const [showMoreUrl, setShowMoreUrl] = useState('')
+
+  const timerRef = useRef(null)
+
   const blockProps = useBlockProps({
     className: NAME + '_events-list',
   })
+
   function reloadEventList(eventsCount, groupName) {
-    if (timer) {
-      clearTimeout(timer)
+    if (timerRef.current) {
+      clearTimeout(timerRef.current)
     }
-    timer = setTimeout(async () => {
+    timerRef.current = setTimeout(async () => {
       const container = document.getElementById(blockProps.id)
-      if (container) {
-        hideErrorMessages(container)
-        clearEventsList(container)
-        showLoadingIndicator(container)
-        let url = `/wp-json/connector-mobilizon/v1/events?eventsCount=${eventsCount}`
-        let showMoreUrl = window.MOBILIZON_CONNECTOR.url
-        if (groupName) {
-          showMoreUrl += '/@' + groupName + '/events'
-          url += `&groupName=${groupName}`
+      if (!container) {
+        return
+      }
+
+      hideErrorMessages(container)
+      clearEventsList(container)
+      showLoadingIndicator(container)
+
+      if (groupName) {
+        const groupNames = groupName.split(',').map((name) => name.trim())
+        const updatedGroups = groupNames.map((name) => ({
+          name,
+          url: `${window.MOBILIZON_CONNECTOR.url}/@${name}/events`,
+        }))
+        setGroups(updatedGroups)
+      } else {
+        setGroups([])
+      }
+      setShowMoreUrl(window.MOBILIZON_CONNECTOR.url)
+
+      try {
+        const data = await fetchEvents(eventsCount, groupName)
+        const events = JSON.parse(data)
+        displayEvents({
+          events,
+          document,
+          container,
+          maxEventsCount: eventsCount,
+        })
+      } catch (error) {
+        let message = ''
+        try {
+          message = JSON.parse(error)
+        } catch ($e) {
+          message = 'Parsing the error message failed.'
         }
-        container.querySelector('a').href = showMoreUrl
-        await fetch(url)
-          .then(async (response) => {
-            if (!response.ok) {
-              // Reject if no 2xx response.
-              const data = await response.text()
-              return Promise.reject(data)
-            }
-            return response.text()
-          })
-          .then((data) => {
-            const events = JSON.parse(data)
-            displayEvents({
-              events,
-              document,
-              container,
-              maxEventsCount: eventsCount,
-            })
-          })
-          .catch((data) => {
-            const parsedData = JSON.parse(data)
-            displayErrorMessage({ data: parsedData, container })
-          })
+        displayErrorMessage({ data: message, container })
       }
     }, 500)
   }
+
   useEffect(() => {
     reloadEventList(attributes.eventsCount, attributes.groupName)
   }, [])
+
+  async function fetchEvents(eventsCount, groupName) {
+    let url = `/wp-json/connector-mobilizon/v1/events?eventsCount=${eventsCount}`
+    if (groupName) {
+      url += `&groupName=${groupName}`
+    }
+    const response = await fetch(url)
+    if (!response.ok) {
+      const data = await response.text()
+      throw new Error(data)
+    }
+    return response.text()
+  }
+
   function updateEventsCount(event) {
     let newValue = Number(event.target.value)
     if (newValue < 1) {
@@ -74,26 +97,22 @@ export default ({ attributes, setAttributes }) => {
     setAttributes({ eventsCount: newValue })
     reloadEventList(newValue, attributes.groupName)
   }
+
   function updateGroupName(event) {
     const newValue = event.target.value
     setAttributes({ groupName: newValue })
     reloadEventList(attributes.eventsCount, newValue)
   }
+
   return [
     <InspectorControls>
       <Panel>
-        <PanelBody
-          title={Formatter.escapeHTML(
-            __('Events List Settings', '<wordpress-name>'),
-          )}
-        >
+        <PanelBody title={__('Events List Settings', '<wordpress-name>')}>
           <label
             className="components-base-control__label"
             htmlFor={NAME + '_events-count'}
           >
-            {Formatter.escapeHTML(
-              __('Number of events to show', '<wordpress-name>'),
-            )}
+            {__('Number of events to show', '<wordpress-name>')}
           </label>
           <input
             className="components-text-control__input"
@@ -105,10 +124,9 @@ export default ({ attributes, setAttributes }) => {
           <label
             className="components-base-control__label"
             htmlFor={NAME + '_group-name'}
+            style={{ paddingTop: '24px' }}
           >
-            {Formatter.escapeHTML(
-              __('Group name (optional)', '<wordpress-name>'),
-            )}
+            {__('Group name (optional)', '<wordpress-name>')}
           </label>
           <input
             className="components-text-control__input"
@@ -117,31 +135,52 @@ export default ({ attributes, setAttributes }) => {
             onChange={updateGroupName}
             id={NAME + '_group-name'}
           />
+          <p className="components-base-control__help">
+            {__(
+              'Use comma-separated values for multiple groups.',
+              '<wordpress-name>',
+            )}
+          </p>
         </PanelBody>
       </Panel>
     </InspectorControls>,
     <div {...blockProps}>
       <div className="general-error" style={{ display: 'none' }}>
-        {Formatter.escapeHTML(
-          __('The events could not be loaded!', '<wordpress-name>'),
-        )}
+        {__('The events could not be loaded!', '<wordpress-name>')}
       </div>
       <div className="group-not-found" style={{ display: 'none' }}>
-        {Formatter.escapeHTML(
-          __('The group could not be found!', '<wordpress-name>'),
-        )}
+        {__('The group could not be found!', '<wordpress-name>')}
       </div>
       <div className="loading-indicator" style={{ display: 'none' }}>
-        {Formatter.escapeHTML(__('Loading...', '<wordpress-name>'))}
+        {__('Loading...', '<wordpress-name>')}
       </div>
-      <ul style={{ 'list-style-type': 'none', 'padding-left': 0 }}></ul>
-      <a
-        href=""
-        target="_blank"
-        style={{ display: 'inline-block', 'margin-top': '20px;' }}
-      >
-        {Formatter.escapeHTML(__('Show more events', '<wordpress-name>'))}
-      </a>
+      <ul style={{ listStyleType: 'none', paddingLeft: 0 }}></ul>
+      {groups.length ? (
+        groups.map((group) => (
+          <a
+            key={group.name}
+            href={group.url}
+            target="_blank"
+            rel="noopener noreferrer"
+            style={{ display: 'inline-block', marginTop: '20px' }}
+          >
+            {sprintf(
+              // translators: %s: group name
+              __('Show more events of %s', '<wordpress-name>'),
+              group.name,
+            )}
+          </a>
+        ))
+      ) : (
+        <a
+          href={showMoreUrl}
+          target="_blank"
+          rel="noopener noreferrer"
+          style={{ display: 'inline-block', marginTop: '20px' }}
+        >
+          {__('Show more events', '<wordpress-name>')}
+        </a>
+      )}
     </div>,
   ]
 }
