@@ -39,7 +39,8 @@ class Api {
 
     try {
       if ($groupName) {
-        $events = GraphQlClient::get_upcoming_events_by_group_name($url, (int) $eventsCount, $groupName);
+        $groupNames = GroupNameHelper::extractAndTrimNames($groupName);
+        $events = GraphQlClient::get_upcoming_events_by_group_names($url, (int) $eventsCount, $groupNames);
       } else {
         $events = GraphQlClient::get_upcoming_events($url, (int) $eventsCount);
       }
