@@ -28,8 +28,9 @@ class EventsListWidget extends \WP_Widget {
     try {
       $showMoreUrl = Settings::getUrl();
       if ($groupName) {
-        $events = GraphQlClient::get_upcoming_events_by_group_name($url, (int) $eventsCount, $groupName);
-        $showMoreUrl .= '/@' . $groupName . '/events';
+        $groupNames = GroupNameHelper::extractAndTrimNames($groupName);
+        $events = GraphQlClient::get_upcoming_events_by_group_names($url, (int) $eventsCount, $groupNames);
+        $groups = GroupNameHelper::convertToGroupsObject($groupNames, $showMoreUrl);
       } else {
         $events = GraphQlClient::get_upcoming_events($url, (int) $eventsCount);
       }
