@@ -1,10 +1,12 @@
 ### [Unreleased]
 #### Added
+- Allow to filter by multiple group names
 #### Changed
 - Confirm compatibility with WordPress 6.9
 - Update dependencies
 #### Deprecated
 #### Removed
+- Revert escaping strings in blocks as React takes care of it
 #### Fixed
 #### Security
 
